--- a/_assets/scss/object/Project/_p-drawer-nav.scss
+++ b/_assets/scss/object/Project/_p-drawer-nav.scss
@@ -9,6 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: map-get(global.$layer, drawer-nav);
   display: flex;
   align-items: center;
   justify-content: center;
